--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run bulid",
-    "deploy": "gh-pages -d bulid",
+    "deploy": "gh-pages -b master -d bulid",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
